[TW-126] hashtag whitespace fix

--- a/src/styles/searchBar.module.scss
+++ b/src/styles/searchBar.module.scss
@@ -4,7 +4,6 @@
 
 .SearchBarcomponant {
   margin-bottom: 10px;
-  background-color: pink;
   width: 97%;
   margin-left: 1.5%;
 }
@@ -24,10 +23,10 @@
 
 .resultsContainer {
   background-color: rgb(255, 255, 255);
-  margin-top: -5px;
-  width: 100%;
+  width: 82.5%;
   border-radius: 0px 0px 15px 15px;
   z-index: 1;
+  position: absolute;
 }
 
 
@@ -35,9 +34,8 @@
   padding: 5px 0px;
   text-align: right;
   width: 96%;
-  margin: 5px 2%;
-  padding-top: 15px;
-  border-bottom: rgb(192, 192, 192) 0.5px solid;
+  margin: 0px 2%;
+  border-bottom: rgb(219, 219, 219) 0.5px solid;
 }
 .name {
   font-weight: 300;
@@ -45,4 +43,6 @@
   color: black;
   text-decoration: none;
   text-align: left;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
